yaml/demo5/web2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp2-deployment
spec:
  selector:
    matchLabels:
      app: web2
  template:
    metadata:
      labels:
        app: web2
    spec:
      containers:
      - name: node-app2
        image: josanescod/node-simple-app:2.0
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nodeapp2-service
spec:
  selector:
    app: web2
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 3000
