yaml/demo5/web3-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: docs-web
  labels:
    app: web3
spec:
  containers:
  - name: webtest
    image: httpd:alpine
    ports:
    - containerPort: 80
    volumeMounts:
    - name: html-volume
      mountPath: /usr/local/apache2/htdocs
  volumes:
  - name: html-volume
    hostPath:
      path: /home/vagrant/mkdocs/site
---
apiVersion: v1
kind: Service
metadata:
  name: docs-service
spec:
  selector:
    app: web3
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 80
