yaml/demo5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
  name: web-server-ingress

spec:
  ingressClassName: nginx
  rules:
  - host: cluster.test.dev
    http:
      paths:
      - path: /app1/(.*)
        pathType: Prefix
        backend:
          service:
            name: nodeapp-service
            port:
              number: 3000
      - path: /app2/(.*)
        pathType: Prefix
        backend:
          service:
            name: nodeapp2-service
            port:
              number: 4000
      - path: /docs/(.*)
        pathType: Prefix
        backend:
          service:
            name: docs-service
            port:
              number: 5000
